--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "avilatek-utils": "^0.1.0",
     "axios": "^1.5.0",
     "framer-motion": "^10.12.16",
+    "graphql-request": "^6.1.0",
+    "graphql-sse": "^2.3.0",
     "nanoid": "^4.0.2",
     "next": "^13.4.4",
     "next-compose-plugins": "^2.2.1",
