--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@avila-tek/next-template",
+  "name": "fran-app",
   "version": "4.0.0",
   "description": "A next.js template for starting frontend projects in Avila Tek",
   "private": true,
@@ -15,6 +15,7 @@
     "e2e:headless": "start-server-and-test dev http://localhost:3000 cypress:headless"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "@sentry/nextjs": "^7.54.0",
     "@tanstack/react-query": "^4.35.0",
     "avilatek-utils": "^0.1.0",
@@ -29,6 +30,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-redux": "^8.1.3",
     "throttle-debounce": "^5.0.0"
   },
   "devDependencies": {
